--- a/Numerical_Experiments_Batch_LDMI/LDMIBatch_NNAntisparse_CovBased_HighCorrelation.ipynb
+++ b/Numerical_Experiments_Batch_LDMI/LDMIBatch_NNAntisparse_CovBased_HighCorrelation.ipynb
@@ -307,7 +307,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -321,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
